Fix overlay not covering whole screen

--- a/src/styles/ItemButton.css
+++ b/src/styles/ItemButton.css
@@ -36,10 +36,11 @@
 }
 
 .item-menu-overlay{
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     width: 100dvw;
     height: 100dvh;
     background-color: var(--none);
+    z-index: 9999;
 }
